# GemmComplier

./: README.md
docs/: mlir-tablegen-notes.md
lib/mlir/: CMakeLists.txt
lib/mlir/include/Dialect/: CMakeLists.txt  Gemm.h  Gemm.td  GemmOps.h  GemmOps.td  GemmTypes.h  GemmTypes.td
lib/mlir/include/Pass/: CMakeLists.txt  pass.h  pass.td
lib/mlir/lib/Dialect/: CMakeLists.txt  GemmDialect.cpp
lib/mlir/lib/Pass/: pass.cpp
lib/mlir/tools/gemm-opt/: CMakeLists.txt  gemm-opt.cpp
scripts/: create_gemm.py  single_gemm.onnx
tools/onnx2ir/: gen_test_model.py  model.onnx  onnx2ir.py
